--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 <body>
 
     <header>
-        <strong>Lawlegal Website</strong>
+        <strong>Lawlegal Website - git</strong>
         <nav>
             <ul>
                 <li><a href="{{site.baseurl}}/index.html">Home</a></li>
